// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<UniformgenerationOffcanvas> with generation renders the component 1`] = `
<div
  aria-labelledby="generation-offcanvas-header"
  aria-modal="true"
  class="offcanvas offcanvas-end offcanvas-toggling show"
  role="dialog"
  style="width: 500px; visibility: visible;"
  tabindex="-1"
>
  <div
    class="offcanvas-header"
  >
    <div
      class="offcanvas-title h5"
    >
      <h2
        id="generation-offcanvas-header"
      >
        Test Generation
      </h2>
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="offcanvas-body"
  >
    <hr
      class="my-0"
    />
    <div
      class="mb-4 justify-content-evenly row"
    >
      <button
        class="col-auto border-0 btn btn-outline-secondary"
        type="button"
      >
        common.actions.edit
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pen fa-sm "
          data-icon="pen"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M352.9 21.2L308 66.1 445.9 204 490.8 159.1C504.4 145.6 512 127.2 512 108s-7.6-37.6-21.2-51.1L455.1 21.2C441.6 7.6 423.2 0 404 0s-37.6 7.6-51.1 21.2zM274.1 100L58.9 315.1c-10.7 10.7-18.5 24.1-22.6 38.7L.9 481.6c-2.3 8.3 0 17.3 6.2 23.4s15.1 8.5 23.4 6.2l127.8-35.5c14.6-4.1 27.9-11.8 38.7-22.6L412 237.9 274.1 100z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="col-auto border-0 btn btn-outline-danger"
        type="button"
      >
        common.actions.delete
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash fa-sm "
          data-icon="trash"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form>
      <div
        class="row"
      >
        <div
          class="col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_input-name"
            >
              common.name
            </label>
            <input
              aria-invalid="false"
              class="form-control-plaintext"
              disabled=""
              id="uniformGenerationForm_input-name"
              name="name"
              type="text"
              value="Test Generation"
              width="auto"
            />
            <div
              aria-label="error message name"
              class="text-danger fs-7"
              data-testid="err_name"
              id="uniformGenerationForm_err_name"
              role="alert"
            />
          </div>
        </div>
        <div
          class="align-bottom col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_toggle-outdated"
            >
              common.uniform.generation.outdated
            </label>
            <div
              class="form-check form-switch px-0 my-auto"
            >
              <input
                aria-checked="false"
                aria-disabled="true"
                class="form-check-input ms-0 my-2"
                id="uniformGenerationForm_toggle-outdated"
                name="outdated"
                role="switch"
                style="pointer-events: none; opacity: 0.5;"
                tabindex="-1"
                type="checkbox"
                value="false"
              />
            </div>
            <div
              aria-label="error message outdated"
              class="text-danger fs-7"
              data-testid="err_outdated"
              id="uniformGenerationForm_err_outdated"
              role="alert"
            />
          </div>
        </div>
        <div
          class="col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_select-fk_sizelist"
            >
              common.uniform.sizelist.label
            </label>
            <p
              aria-label="common.uniform.sizelist.label"
              aria-readonly="true"
              class="py-2 m-0"
            >
              Test Size List
            </p>
            <div
              aria-label="error message fk_sizelist"
              class="text-danger fs-7"
              data-testid="err_fk_sizelist"
              id="uniformGenerationForm_err_fk_sizelist"
              role="alert"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<UniformgenerationOffcanvas> without generation renders in editable state if no generation is passed 1`] = `
<div
  aria-labelledby="generation-offcanvas-header"
  aria-modal="true"
  class="offcanvas offcanvas-end offcanvas-toggling show"
  role="dialog"
  style="width: 500px; visibility: visible;"
  tabindex="-1"
>
  <div
    class="offcanvas-header"
  >
    <div
      class="offcanvas-title h5"
    >
      <h2
        id="generation-offcanvas-header"
      >
        admin.uniform.generationList.header.create
      </h2>
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="offcanvas-body"
  >
    <hr
      class="my-0"
    />
    <div
      class="mb-4 justify-content-evenly row"
    >
      <button
        class="col-auto border-0 btn btn-outline-secondary"
        disabled=""
        type="button"
      >
        common.actions.edit
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pen fa-sm "
          data-icon="pen"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M352.9 21.2L308 66.1 445.9 204 490.8 159.1C504.4 145.6 512 127.2 512 108s-7.6-37.6-21.2-51.1L455.1 21.2C441.6 7.6 423.2 0 404 0s-37.6 7.6-51.1 21.2zM274.1 100L58.9 315.1c-10.7 10.7-18.5 24.1-22.6 38.7L.9 481.6c-2.3 8.3 0 17.3 6.2 23.4s15.1 8.5 23.4 6.2l127.8-35.5c14.6-4.1 27.9-11.8 38.7-22.6L412 237.9 274.1 100z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="col-auto border-0 btn btn-outline-danger"
        disabled=""
        type="button"
      >
        common.actions.delete
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash fa-sm "
          data-icon="trash"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <form>
      <div
        class="row"
      >
        <div
          class="col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_input-name"
            >
              common.name
            </label>
            <input
              aria-invalid="false"
              class="form-control"
              id="uniformGenerationForm_input-name"
              name="name"
              type="text"
              value=""
              width="auto"
            />
            <div
              aria-label="error message name"
              class="text-danger fs-7"
              data-testid="err_name"
              id="uniformGenerationForm_err_name"
              role="alert"
            />
          </div>
        </div>
        <div
          class="align-bottom col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_toggle-outdated"
            >
              common.uniform.generation.outdated
            </label>
            <div
              class="form-check form-switch px-0 my-auto"
            >
              <input
                aria-checked="false"
                aria-disabled="false"
                class="form-check-input ms-0 my-2"
                id="uniformGenerationForm_toggle-outdated"
                name="outdated"
                role="switch"
                style="cursor: pointer;"
                tabindex="0"
                type="checkbox"
                value="false"
              />
            </div>
            <div
              aria-label="error message outdated"
              class="text-danger fs-7"
              data-testid="err_outdated"
              id="uniformGenerationForm_err_outdated"
              role="alert"
            />
          </div>
        </div>
        <div
          class="col-6"
        >
          <div>
            <label
              class="fw-bold m-0  form-label"
              for="uniformGenerationForm_select-fk_sizelist"
            >
              common.uniform.sizelist.label
            </label>
            <select
              aria-invalid="false"
              class="text-truncate  form-select"
              id="uniformGenerationForm_select-fk_sizelist"
              name="fk_sizelist"
            >
              <option
                disabled=""
                value=""
              >
                common.error.pleaseSelect
              </option>
              <option
                value="e667d674-7df8-436b-a2b8-77b06e063d36"
              >
                Test Size List
              </option>
              <option
                value="a961545b-28a7-409e-9200-1d85ccd53522"
              >
                Test Size List 2
              </option>
              <option
                value="07de1d59-4fc6-447b-98a6-da916e5792ef"
              >
                Test Size List 3
              </option>
            </select>
            <div
              aria-label="error message fk_sizelist"
              class="text-danger fs-7"
              data-testid="err_fk_sizelist"
              id="uniformGenerationForm_err_fk_sizelist"
              role="alert"
            />
          </div>
        </div>
        <div
          class="justify-content-evenly mt-2 mb-4 row"
        >
          <button
            class="col-auto btn btn-primary"
            type="submit"
          >
            common.actions.create
          </button>
          <button
            class="col-auto btn btn-outline-secondary"
            type="button"
          >
            common.actions.cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
